TDP-277 : fix playground right panel unecessary scrollbar

--- a/dataprep-webapp/src/components/suggestions-stats/_suggestions-stats.scss
+++ b/dataprep-webapp/src/components/suggestions-stats/_suggestions-stats.scss
@@ -15,7 +15,6 @@
 
   background: $background;
   color: $color;
-  overflow-y: auto;
 
   .action-category{
     font-size: .9em;
